<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="login_description">Чтобы продолжить - войдите в свой аккаунт.</string>
    <string name="register_desc">Чтобы продолжить - зарегистрируйтесь</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Номер телефона</string>
    <string name="name">Имя</string>
    <string name="have_already_account_question">Уже есть аккаунт?</string>
    <string name="name_valid_error">Имя должно состоять из латинских букв, длина 3–20</string>
    <string name="phone_valid_error">Телефон введен неправильно. Маска: +7 (982)–912–45–41</string>
    <string name="email_valid_error">Email введен неправильно. Введите на основе: example@example.com</string>
    <string name="user_already_exists_msg">Пользователь с таким именем или телефоном уже существует!</string>
    <string name="session_arg_name">session</string>
    <string name="music">Музыка</string>
    <string name="add">Добавить</string>
    <string name="profile">Профиль</string>
    <string name="current_password">Ваш текущий пароль</string>
    <string name="new_password">Ваш новый пароль</string>
    <string name="repeat_new_password">Повторите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="fill_field">Заполните поле</string>
    <string name="passwords_not_equals">Пароли не совпадают</string>
    <string name="sucess_change_phone">Номер телефона успешно изменен!</string>
    <string name="failure_change_phone">Не удалось изменнить номер телефона: пользователь с таким номером уже существует.</string>
    <string name="success_change_password">Пароль успешно изменен!</string>
    <string name="failure_change_password">Не удалось изменить пароль: неправильно введенный пароль.</string>
    <string name="exit">Выйти</string>
    <string name="error_while_change_phone">Произошла непредвиденная ошибка при изменении телефона</string>
    <string name="error_while_change_password">Произошла непредвиденная ошибка во время смены пароля</string>
    <string name="text">Текст</string>
    <string name="duration">Длительность(nn:nn)</string>
    <string name="author">Автор</string>
    <string name="song_title">Название песни</string>
    <string name="song">песня</string>
    <string name="rate_song">Оценка данной песни:</string>
    <string name="have_not_rate">Голосов нет.</string>
    <string name="songs_not_found">Песен не найдено</string>
    <string name="favorite_songs_not_found">У вас еще нет избранных песен</string>
    <string name="failure_delete_song">Не удалось удалить песню из общего списка попробуйте позже.</string>
    <string name="user_rating_title">Ваша оценка:</string>
    <string name="vote">Проголосовать</string>
    <string name="failure_vote">Не получилось поставить оценку песне</string>
    <string name="invalid_time">Вы ввели время в неправильном формате. Правильный: мм:сс</string>
    <string name="song_successful_added">Песня успешно добавлена!</string>
    <string name="song_not_added">Песня не добавлена.</string>
    <string name="error_during_adding_song">Произошла непредвиденная ошибка при добавлении музыка</string>
    <string name="are_you_sure_want_delete_proifle">Вы уверены, что хотите удалить профиль?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="invalid_phone_or_password">Вы ввели неправильный номер телефона/пароль</string>
</resources>