<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@drawable/snowflake_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/sh_auth_block"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        android:elevation="5dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/welcome_title"

            android:text="@string/welcome_title"
            android:layout_marginTop="5dp"
            />
        <androidx.appcompat.widget.AppCompatTextView
            style="@style/welcome_description"

            android:text="@string/register_desc"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_input_form"
                android:paddingHorizontal="30dp"
                android:paddingVertical="15dp"
                android:hint="@string/name"
                android:textColorHint="@color/text_gray"
                android:textSize="18sp"
                android:shadowRadius="0.2"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_input_form"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:hint="@string/phone_number"
                android:textColorHint="@color/text_gray"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_input_form"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:hint="@string/email"
                android:textColorHint="@color/text_gray"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_input_form"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:hint="@string/password"
                android:textColorHint="@color/text_gray"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_input_form"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/text_gray"
                android:layout_marginTop="10dp"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/remember_me"
                android:textColor="@color/text_gray"/>
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_primary_btn"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:fontFamily="@font/rubik"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/label_tv_move_to_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/btn_move_to_register"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="Уже есть аккаунт?"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="@font/rubik"
                    android:textColor="@color/text_gray"

                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_move_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/rubik"
                    android:padding="0dp"
                    style="@style/MoveBtnStyle"
                    android:layout_marginStart="-25dp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>