<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg">

    <LinearLayout
        android:id="@+id/layout_song_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/sh_auth_block"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/et_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/song_title"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_song_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/author"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_song_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/duration"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_song_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:hint="@string/text"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColorHint="@color/text_gray"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_song_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/sh_primary_btn"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>