<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg">
<!--    <ProgressBar-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:elevation="10dp"-->
<!--        android:background="@color/black"-->
<!--        />-->


    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:text="Данные вашего профиля"
        android:textAlignment="center"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/layout_profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/sh_profile_block"
        android:elevation="5dp"
        android:orientation="vertical"
        app:flow_horizontalGap="15dp">
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/name"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:enabled="false"
            />
        <EditText
            style="EditText."
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:layout_marginTop="5dp"
            android:hint="@string/email"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:enabled="false"
            />
        <EditText
            android:id="@+id/edit_text_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:layout_marginTop="5dp"
            android:hint="@string/phone_number"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:text="123"
            android:enabled="false"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="13dp"
        app:layout_constraintTop_toBottomOf="@id/layout_profile_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/sh_profile_block"
        android:elevation="5dp"
        android:orientation="vertical"
        app:flow_horizontalGap="15dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/edit_text_change_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/phone_number"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:text="123"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="13dp"
        app:layout_constraintTop_toBottomOf="@id/layout_change_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/sh_profile_block"
        android:elevation="5dp"
        android:orientation="vertical"
        app:flow_horizontalGap="15dp"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/et_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/current_password"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/new_password"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            />
        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sh_profile_input"
            android:paddingHorizontal="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/repeat_new_password"
            android:fontFamily="@font/rubik"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/text_gray"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/sh_primary_btn"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_save_changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/delete_profile"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/sh_secondary_btn"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@drawable/sh_secondary_btn"
        android:layout_marginTop="10dp"
        android:elevation="20dp"
        android:fontFamily="@font/rubik"
        android:textStyle="bold"
        android:textAllCaps="false"
        />


</androidx.constraintlayout.widget.ConstraintLayout>